<resources>
    <string name="app_name">KLT</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="forgetPassword">Забыли пароль</string>
    <string name="signIn">Войти</string>
    <string name="registration">Нет аккаунта? Зерегестрироваться</string>
    <string name="email">Email</string>
    <string name="tvEmail">Введите e-mail для восстановления пароля</string>
    <string name="btnRegistration">Зарегистрироваться</string>
    <string name="createAccount">Создать аккаунт</string>

    //Errors
    <string name="errorNameLength">Имя слишком короткое</string>
    <string name="errorEmailLength">E-mail слишком короткий</string>
    <string name="errorEmailCharacter">Вы не написали символ @</string>
    <string name="errorPasswordLength">Пароль слишком короткий</string>

</resources>
